[tool.poetry]
name = "capstone_final"
version = "0.1.0"
description = ""
authors = ["Jersey <jerseyliu228@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
geopy = "^2.2.0"
geocoder = "^1.38.1"
folium = "^0.12.1"
pandas = "^1.4.2"
bs4 = "^0.0.1"
requests = "^2.27.1"
matplotlib = "^3.5.2"
lxml = "^4.8.0"

[tool.poetry.dev-dependencies]
ipykernel = "^6.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
